# mutinfo

./: .gitignore  CANGELOG.md  CITATION.cff  README.md  generative_rv_example.ipynb  pyproject.toml  remove_unused.sh  run_infosedd.sh  run_minde.sh  run_minde_modulation.sh  run_minde_symmetric_channels.sh  run_minde_symmetric_channels_cifar.sh  run_minde_synthetic.sh
source/: .gitignore
source/evaluate/: Inspect.ipynb  process.py  run.py
source/evaluate/config.d/: config.yaml  debug.yaml  debug_config.yaml  generative.yaml  generative_moons.yaml  highdim-TRE.yaml  highdim.yaml  images.yaml  images_config.yaml  light.yaml  light_config.yaml  lowdim.yaml  mixing.yaml
source/evaluate/tables/: KSG_MAE_vs_kNN  WKL_MAE_vs_kNN  continuous-distribution_estimator-MAE-10000  distribution_estimator-MAE-10000  distribution_estimator-MAE-CIFAR10-embeddings  lowdim_DD_MINDE-DV  lowdim_GT_MAE_10000  lowdim_kNN_KSG_10000  mi_estimate:base:distribution_method:GT:10k  mi_estimate:base:distribution_method:GT:10k-Copy1  mi_estimate:base:distribution_method:GT:1k  mixing_labels  mixing_multiplication
source/examples/: Base.ipynb  Gaussian.ipynb  KSG (Images).ipynb  KSG (discrete-based).ipynb  KSG (with scaler).ipynb  KSG.ipynb  MINDE.ipynb  MINE.ipynb  Mixing.ipynb  SMI.ipynb  WKL.ipynb
source/examples/utils/: plots.py  tests.py
source/python/: .gitignore
source/python/mutinfo/: __init__.py  (+1 more)
tests/: estimator_tester.py  test_channels.py  test_correlated_uniform.py  test_gamma_exponential.py  test_ksg.py  test_normal.py  test_quantized.py  test_smoothed_uniform.py  test_wkl.py
(+140 files in other folders)
