[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutinfo"
version = "2025.02.1"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.5",
]
requires-python = ">=3.8"
authors = [
  {name = "Butakov Ivan", email = "vanessbut@yandex.com"},
]
maintainers = [
  {name = "Butakov Ivan", email = "vanessbut@yandex.com"}
]
description = "Mutual information estimation benchmarks and tests"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["mutual information", "information theory", "benchmarks"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Repository = "https://github.com/VanessB/mutinfo.git"
"Bug Tracker" = "https://github.com/VanessB/mutinfo/issues"
Changelog = "https://github.com/VanessB/mutinfo/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["source/python/mutinfo"]
